syntax = "proto3";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
option csharp_namespace = "Lykke.Mailerlite.ApiContract";

package common;

service Customers {
  rpc Create (CreateCustomerRequest) returns (google.protobuf.Empty);
  rpc UpdateKyc (UpdateCustomerKycRequest) returns (google.protobuf.Empty);
  rpc UpdateDeposit (UpdateCustomerDepositRequest) returns (google.protobuf.Empty);
}

message CreateCustomerRequest {
  string requestId = 1;
  string customerId = 2;
  string email = 3;
  string kycState = 4;
  google.protobuf.Timestamp timestamp = 5;
  bool fromRestrictedArea = 6;
}

message UpdateCustomerKycRequest {
  string requestId = 1;
  string customerId = 2;
  string kycState = 3;
  google.protobuf.Timestamp timestamp = 4;
}

message UpdateCustomerDepositRequest {
  string requestId = 1;
  string customerId = 2;
  google.protobuf.Timestamp timestamp = 3;
}